--- a/index2.html
+++ b/index2.html
@@ -196,7 +196,12 @@
 
 
             <label for="departureTime">Indulási idő:</label>
-            <input type="text" id="departureTime" name="departureTime" placeholder="Válassza ki az indulási időt" required>
+            <select id="departureTime" name="departureTime" required>
+                <option value="" disabled selected>Válassza ki az indulási időt</option>
+                <option value="12:00">12:35</option>
+                <option value="15:00">15:20</option>
+                <option value="18:00">18:00</option>
+                <option value="22:00">22:00</option>
 
             </select>
     
